--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -1,3 +1,4 @@
-@import './quasar.variables.scss';
+@import './quasar.variables.sass';
+@import './global.sass';
 @import '~quasar-styl';
 // @import '~quasar-addon-styl';
