--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -5,3 +5,11 @@ body
 	-moz-user-select: none       // Firefox 
 	-ms-user-select: none        // IE 10+ and Edge 
 	user-select: none            // Non-prefixed version
+
+//.crud-table replace .q-table__container
+.q-table__container
+	& .q-table__top
+	& .q-table__middle
+		height: calc( 100vh - 165px )!important
+	& .q-table__bottom--nodata
+		margin-top: -65px
