--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -5,9 +5,10 @@ body
 	-moz-user-select: none       // Firefox 
 	-ms-user-select: none        // IE 10+ and Edge 
 	user-select: none            // Non-prefixed version
+	overflow: hidden
 
-//.crud-table replace .q-table__container
-.q-table__container
+//.crud-table replace 
+.q-table__container.q-table__card
 	& .q-table__top
 	& .q-table__middle
 		height: calc( 100vh - 165px )!important
