Activation account with email -- Services

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -14,3 +14,10 @@ body
 		height: calc( 100vh - 165px )!important
 	& .q-table__bottom--nodata
 		margin-top: -65px
+
+// calendar overrides
+.q-calendar-daily__day-interval:hover, 
+.q-calendar-weekly__workweek:hover,
+.q-calendar-weekly__day:hover,
+.q-calendar-weekly__head-weekday:hover
+  background-color:  rgba(0,0,255,.1)
